--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -96,6 +97,9 @@ flutter:
 
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/images/
+    - assets/animations/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -114,19 +118,17 @@ flutter:
   fonts:
     - family: Cairo
       fonts:
-        - asset: assets/fonts/Cairo-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/Cairo-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Cairo-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/Cairo-ExtraBold.ttf
-          weight: 800
-        - asset: assets/fonts/Cairo-Black.ttf
-          weight: 900
+        - asset: assets/fonts/Cairo-VariableFont_slnt,wght.ttf
+        #   weight: 400
+        # - asset: assets/fonts/Cairo-SemiBold.ttf
+        #   weight: 600
+        # - asset: assets/fonts/Cairo-Bold.ttf
+        #   weight: 700
+        # - asset: assets/fonts/Cairo-ExtraBold.ttf
+        #   weight: 800
+        # - asset: assets/fonts/Cairo-Black.ttf
+        #   weight: 900
 
-  assets:
-    - assets/images/
-    - assets/animations/
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
